make query dynamic
